@@ -22,22 +22,25 @@ public class CandidatureMapperImpl implements CandidatureMapper {
     @Override
     public Candidature toEntity(CandidatureRequestDTO dto) {
         Candidat candidat = candidatService.findFullCandidatById(dto.getCandidatId());
-        return Candidature.builder()
+        Candidature c = Candidature.builder()
                 .statutCandidature(CandidatureEnum.SOUMISE)
                 .mentionBac(dto.getMentionBac())
-                .diplome(dto.getDiplome())
                 .mentionDiplome(dto.getMentionDiplome())
-                // .dossierCandidature(dto.getDossierCandidature())
+                // Le path du fichier sera mis à jour dans le service, pas ici
+                .dossierCandidature("")
                 .typeEtablissement(dto.getTypeEtablissement())
                 .specialite(dto.getSpecialite())
                 .intitulePFE(dto.getIntitulePFE())
                 .candidat(candidat)
-                .sujets(null)
+                .sujets(null) // la liste sera complétée en service
                 .build();
+        return c;
+
     }
 
     @Override
     public CandidatureResponseDTO toResponseDTO(Candidature entity) {
+
         return CandidatureResponseDTO.builder()
                 .id(entity.getId())
                 .createdAt(entity.getCreatedAt())
@@ -51,8 +54,12 @@ public class CandidatureMapperImpl implements CandidatureMapper {
                 .specialite(entity.getSpecialite())
                 .intitulePFE(entity.getIntitulePFE())
                 .candidatId(entity.getCandidat().getId())
-                .sujetsIds(entity.getSujets() != null ? entity.getSujets().stream().map(s -> s.getId()).toList()
-                        : List.of())
+                .sujetsIds(
+                        entity.getSujets() != null
+                                ? entity.getSujets().stream()
+                                        .map(s -> s.getId())
+                                        .collect(Collectors.toList())
+                                : List.of())
                 .build();
     }
 }
